ISIS-2965: improves release docs

--- a/antora/components/comguide/modules/ROOT/pages/cutting-a-release.adoc
+++ b/antora/components/comguide/modules/ROOT/pages/cutting-a-release.adoc
@@ -109,7 +109,7 @@ pushd bom
 mvn -Dgithub clean install -T1C -DskipTests # <.>
 mvn -Dgithub license:download-licenses      # <.>
 popd
-groovy scripts/checkmissinglicenses.groovy
+groovy scripts/checkmissinglicenses.groovy  # <.>
 ----
 <.> builds the framework.
 +
