ISIS-2965: improves release docs

--- a/antora/components/comguide/modules/ROOT/pages/cutting-a-release.adoc
+++ b/antora/components/comguide/modules/ROOT/pages/cutting-a-release.adoc
@@ -450,8 +450,8 @@ Finally, tag the release:
 
 [source,bash,subs="attributes+"]
 ----
-git tag $ISISART-$ISISREL
-git tag $ISISART-$ISISREL-$ISISRC
+git tag $ISISART-$ISISREL --force
+git tag $ISISART-$ISISREL-$ISISRC --force
 ----
 
 
